--- a/Book.html
+++ b/Book.html
@@ -2,21 +2,20 @@
 <html>
  <head>
  <title>This is for Jquery-mobile test</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />
-	<meta charset="utf-8">
-	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.js"></script>
-	
-	
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./jquery.mobile-1.1.0.min.css" />
+  	<script src="./jquery-1.8.2.min.js"></script>
+  	<script src="./jquery.mobile-1.1.0.min.js"></script>
+
+
 	<script>
-	
+
 		$(document).bind('mobileinit', function(){
-			$.event.special.swipe.horizontalDistanceThreshold = 100; 
-			$.event.special.swipe.verticalDistanceThreshold = 120; 
+			$.event.special.swipe.horizontalDistanceThreshold = 100;
+			$.event.special.swipe.verticalDistanceThreshold = 120;
 		});
-		
-		
+
+
 	</script>
 
 
@@ -31,11 +30,11 @@
 				<li><a href="#">登出</a></li>
 			</ul>
 		</div><!-- /navbar -->
-		
+
 	</div>
-		  
-		<div data-role="content">    
-		
+
+		<div data-role="content">
+
 			<ul data-role="listview" data-inset="true" >
 				<li><a href="#500EPRO" data-transition="slide" data-theme="b">T-REX 500E PRO 高級套裝版</a></li>
 				<li><a href="#500EFL" data-transition="slide" data-theme="b">T-REX 500EFL PRO 高級套裝版</a></li>
@@ -54,149 +53,149 @@
 		</div>
 </div>
 
-<div data-role="page" id="500EPRO">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591800" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="500EPRO">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591800" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 500E PRO 高級套裝版" target="_blank">
 T-REX 500E PRO 高級套裝版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-<div data-role="page" id="500EFL">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591816" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="500EFL">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591816" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 500EFL PRO 高級套裝版" target="_blank">
 T-REX 500EFL PRO 高級套裝版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-<div data-role="page" id="500E3GX">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591826" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="500E3GX">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591826" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 550E 3GX 高級套裝版" target="_blank">
 T-REX 550E 3GX 高級套裝版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-<div data-role="page" id="500EV2">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591829" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="500EV2">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591829" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 550E V2 高級套裝版" target="_blank">
 T-REX 550E V2 高級套裝版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-<div data-role="page" id="600NITRO">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591836" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="600NITRO">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591836" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 600 Nitro 頂級版" target="_blank">
 T-REX 600 Nitro 頂級版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-<div data-role="page" id="600EPRO">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591839" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="600EPRO">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591839" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 600E PRO Super Combo 高級套裝版" target="_blank">
 T-REX 600E PRO Super Combo 高級套裝版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-<div data-role="page" id="600EFLKIT">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591846" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="600EFLKIT">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591846" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 600EFL PRO KIT版" target="_blank">
 T-REX 600EFL PRO KIT版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-<div data-role="page" id="600EFLSUPER">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591863" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="600EFLSUPER">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591863" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 600EFL PRO Super Combo 高級套裝版" target="_blank">
 T-REX 600EFL PRO Super Combo 高級套裝版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-<div data-role="page" id="600NV2">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591869" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="600NV2">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591869" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 600N V2 頂級空機版" target="_blank">
 T-REX 600N V2 頂級空機版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-<div data-role="page" id="700E3GX">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591877" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="700E3GX">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591877" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 700E 3GX 高級套裝版" target="_blank">
 T-REX 700E 3GX 高級套裝版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-<div data-role="page" id="700ECOMBO">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591885" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="700ECOMBO">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591885" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 700E Combo套裝版" target="_blank">
 T-REX 700E Combo套裝版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-<div data-role="page" id="700EF3CV2">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591895" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="700EF3CV2">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591895" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 700E F3C V2 高級套裝版" target="_blank">
 T-REX 700E F3C V2 高級套裝版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-<div data-role="page" id="700EF3C">	
-<iframe src="http://www.slideshare.net/slideshow/embed_code/22591793" width="479" height="550" frameborder="0" 
-marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> 
-</iframe> 
-<div style="margin-bottom:5px"> 
+<div data-role="page" id="700EF3C">
+<iframe src="http://www.slideshare.net/slideshow/embed_code/22591793" width="479" height="550" frameborder="0"
+marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen>
+</iframe>
+<div style="margin-bottom:5px">
 <strong> <a href="http://www.slideshare.net/devabchb/t-rex-700-e-f3c" title="T-REX 700E F3C 高級套裝版" target="_blank">
 T-REX 700E F3C 高級套裝版</a></strong>
-from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong> 
+from <strong><a href="http://www.slideshare.net/devabchb" target="_blank">devabchb</a></strong>
 </div>
 </div>
 
-  
+
 </body>
 </html>
