--- a/North_Area.html
+++ b/North_Area.html
@@ -2,11 +2,11 @@
 <html>
  <head>
  <title>北部地區</title>
- 
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />
-	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./jquery.mobile-1.1.0.min.css" />
+  	<script src="./jquery-1.8.2.min.js"></script>
+  	<script src="./jquery.mobile-1.1.0.min.js"></script>
 
 </head>
 <body>
@@ -19,7 +19,7 @@
                 <li><a href="#">登出</a></li>
             </ul>
         </div><!-- /navbar -->
-		
+
     </div>
 
       <ul data-role="listview" data-inset="true" >
@@ -31,6 +31,6 @@
 
  </div>
 
- 
+
 </body>
 </html>
